--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Ignore jupyter checkpoints
+jupyter/.ipynb_checkpoints/*
+jupyter/.virtual_documents/*
+jupyter/src/__pycache__/*
+jupyter/src/.ipynb_checkpoints/*
+ssl/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
