--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,31 @@
+// For format details, see https://aka.ms/devcontainer.json
 {
-    "name": "2048-deep-rl",
-    "build": { "dockerfile": "dockerfile" },
-    "settings": { 
-        "terminal.integrated.shell.linux": "/bin/bash",
-        "python.pythonPath": "/usr/local/bin/python",
+    "name": "learn-2048-dev",
+
+    "build": { 
+        "dockerfile": "containerfile",
+        "context": ".",
+    },
+
+    "settings": {
         "python.linting.enabled": true,
         "python.linting.pylintEnabled": false,
         "python.linting.flake8Enabled": true,
-        "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
-        "jupyter.jupyterServerType": "local",
+        "python.linting.pydocstyleEnabled": true,
+        "python.linting.flake8Path": "/usr/local/bin/flake8",
+        "python.linting.pydocstylePath": "/usr/local/bin/flake8",
         "jupyter.alwaysTrustNotebooks": true,
     },
-    "extensions": ["ms-python.python", "ms-toolsai.jupyter"]
+
+    "extensions": [
+        "ms-python.python",
+    ],
+
+    "remoteEnv": {
+        "PYTHONPATH": "${PYTHONPATH}:/workspaces/2048-deep-rl",
+    },
+
+    "runArgs": [
+        "--security-opt=label=disable",
+    ]
 }
