--- a/.devcontainer/containerfile
+++ b/.devcontainer/containerfile
@@ -1,7 +1,23 @@
+# Cuda compatiably base image
 FROM docker.io/nvidia/cuda:11.3.1-cudnn8-devel-ubuntu20.04
 
+# OS packages
 RUN apt-get update && \
-    apt-get install -y python3 python3-pip git && \
-    rm -rf /var/lib/apt/lists/*
+    && apt-get install -y curl \
+    && curl -sL https://deb.nodesource.com/setup_current.x | bash - \
+    && apt-get install -y git nodejs neovim python3 python3-pip zsh \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install --no-cache-dir flake8 pydocstyle jupyter torch numba
+# Dev environment python packages
+RUN pip3 install --no-cache-dir \
+    flake8==3.9.2 \
+    pydocstyle==6.1.1 \
+    jupyter==1.0.0
+
+# Oh-My-Zsh
+RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended
+
+# Runtime environment python packages
+
+# Expose Ports
+EXPOSE 8000
