--- a/.devcontainer/containerfile
+++ b/.devcontainer/containerfile
@@ -1,23 +1,27 @@
+# Arguments
+ARG CUDA_VERSION
+ARG UBUNTU_VERSION
 # Cuda compatiably base image
-FROM docker.io/nvidia/cuda:11.3.1-cudnn8-devel-ubuntu20.04
+FROM docker.io/nvidia/cuda:${CUDA_VERSION}-cudnn8-devel-ubuntu${UBUNTU_VERSION}
 
 # OS packages
-RUN apt-get update && \
+RUN apt-get update \
     && apt-get install -y curl \
     && curl -sL https://deb.nodesource.com/setup_current.x | bash - \
     && apt-get install -y git nodejs neovim python3 python3-pip zsh \
     && rm -rf /var/lib/apt/lists/*
 
 # Dev environment python packages
-RUN pip3 install --no-cache-dir \
-    flake8==3.9.2 \
-    pydocstyle==6.1.1 \
-    jupyter==1.0.0
+RUN pip3 install --no-cache-dir flake8 pydocstyle jupyter
 
-# Oh-My-Zsh
-RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended
+# Oh my zsh
+RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended \
+    && git clone https://github.com/zsh-users/zsh-autosuggestions /root/.oh-my-zsh/custom/plugins/zsh-autosuggestions \
+    && git clone https://github.com/zsh-users/zsh-history-substring-search /root/.oh-my-zsh/custom/plugins/zsh-history-substring-search \
+    && git clone https://github.com/zsh-users/zsh-syntax-highlighting /root/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
+COPY .zshrc /root/.zshrc
+ENV SHELL /usr/bin/zsh
 
 # Runtime environment python packages
-
-# Expose Ports
-EXPOSE 8000
+RUN pip3 install --no-cache-dir "jax[cuda111]==0.2.17" -f https://storage.googleapis.com/jax-releases/jax_releases.html
+RUN pip3 install --no-cache-dir numba==0.53.1 pydantic==1.8.2 fastapi[all]==0.66.0 SQLAlchemy==1.4.20 torch==1.9.0
