Implement Execute Turn

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,7 @@
     "forwardPorts": [8000],
 
     "runArgs": [
-        "--security-opt=label=disable",
+        "--pid=host",
     ],
 
     "extensions": [
