--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,7 @@
         "type=bind,src=${localEnv:HOME}/.ssh/id_ed25519.pub,dst=/root/.ssh/id_25519.pub,ro=true,consistency=cached"
     ],
 
-    "forwardPorts": [8000],
+    "forwardPorts": [3000, 8000],
 
     "runArgs": [
         "--pid=host",
