--- a/.devcontainer/containerfile
+++ b/.devcontainer/containerfile
@@ -11,17 +11,19 @@ RUN apt-get update \
     && apt-get install -y git nodejs neovim python3 python3-pip zsh \
     && rm -rf /var/lib/apt/lists/*
 
+# Upgrade pip
+RUN python3 -m pip install --no-cache-dir pip==21.3.1
+
 # Dev environment python packages
-RUN pip3 install --no-cache-dir flake8==3.9.2 pydocstyle==6.1.1
+RUN python3 -m pip install --no-cache-dir flake8==4.0.1 pydocstyle==6.1.1
 
 # Oh my zsh
 RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended \
     && git clone https://github.com/zsh-users/zsh-autosuggestions /root/.oh-my-zsh/custom/plugins/zsh-autosuggestions \
-    && git clone https://github.com/zsh-users/zsh-history-substring-search /root/.oh-my-zsh/custom/plugins/zsh-history-substring-search \
     && git clone https://github.com/zsh-users/zsh-syntax-highlighting /root/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
 COPY .zshrc /root/.zshrc
 ENV SHELL /usr/bin/zsh
 
 # Runtime environment python packages
-RUN pip3 install --no-cache-dir "jax[cuda111]==0.2.17" -f https://storage.googleapis.com/jax-releases/jax_releases.html
-RUN pip3 install --no-cache-dir numba==0.53.1 pydantic==1.8.2 fastapi[all]==0.66.0 SQLAlchemy==1.4.20
+RUN python3 -m pip install --no-cache-dir "jax[cuda]==0.2.26" -f https://storage.googleapis.com/jax-releases/jax_releases.html
+RUN python3 -m pip install --no-cache-dir fastapi[all]==0.70.1 flax==0.3.6 numba==0.54.1 pydantic==1.8.2
